--- a/link-move-json/pom.xml
+++ b/link-move-json/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>bootique-cayenne42-junit5</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
