--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <jackson.version>2.14.3</jackson.version>
         <jackson.databind.version>2.14.3</jackson.databind.version>
         <commons.csv.version>1.3</commons.csv.version>
-        <dflib.version>0.18</dflib.version>
+        <dflib.version>1.2.0</dflib.version>
         <junit5.version>5.9.1</junit5.version>
         <bootique.version>3.0-M6</bootique.version>
         <mockito.version>3.9.0</mockito.version>
@@ -89,10 +89,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.nhl.dflib</groupId>
-                <artifactId>dflib-bom</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
+                <groupId>org.dflib</groupId>
+                <artifactId>dflib</artifactId>
                 <version>${dflib.version}</version>
             </dependency>
 
