--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn clean verify
 
   deploy:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master'}}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/3.0.x'}}
     needs: build
     runs-on: ubuntu-latest
 
