--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
         <!-- Framework versions -->
         <slf4j.version>2.0.17</slf4j.version>
         <cayenne.version>4.2.3</cayenne.version>
-        <jackson.version>2.15.4</jackson.version>
-        <jackson.databind.version>2.15.4</jackson.databind.version>
+        <jackson.version>2.19.4</jackson.version>
+        <jackson.databind.version>2.19.4</jackson.databind.version>
         <commons.csv.version>1.11.0</commons.csv.version>
         <dflib.version>1.2.0</dflib.version>
         <junit5.version>5.12.1</junit5.version>
-        <bootique.version>3.0-M6</bootique.version>
+        <bootique.version>3.0-SNAPSHOT</bootique.version>
         <mockito.version>3.9.0</mockito.version>
 
         <!-- Plugin Versions -->
@@ -85,6 +85,32 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <!-- Temporarily need bootique 3.0-SNAPSHOT access -->
+    <repositories>
+        <repository>
+            <id>linkmove-snapshots</id>
+            <url>http://maven.objectstyle.org/nexus/content/repositories/linkrest-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+
+        <!-- Main artifact repo -->
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     
     <dependencyManagement>
         <dependencies>
