--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
           cache: 'maven'
 
       - name: Build and test...
-        run: mvn clean verify
+        run: mvn clean verify -U
 
   deploy:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
@@ -48,7 +48,7 @@ jobs:
           cache: 'maven'
 
       - name: Deploy...
-        run: mvn clean source:jar javadoc:javadoc deploy -DskipTests --settings .github/workflows/maven_settings.xml
+        run: mvn clean source:jar javadoc:javadoc deploy -U -DskipTests --settings .github/workflows/maven_settings.xml
         # skip this for the release versions
         if: contains(env.POM_VERSION, '-SNAPSHOT')
         env:
