fixing snapshots repo

--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,8 @@
     <!-- Temporarily need bootique 3.0-SNAPSHOT access -->
     <repositories>
         <repository>
-            <id>linkmove-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>bootique-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
